fixed portfolio image size, fixed portfolio card gaps

--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ section {
 
 section ul {
   display: flex;
-  gap: 24px;
+  gap: 48px 24px;
   flex-wrap: wrap;
 }
 
@@ -163,6 +163,7 @@ h3 {
   font-weight: var(--base-font-weight);
   font-size: 20px;
   line-height: 1.2;
+  letter-spacing: 0.02em;
   color: var(--navy-blue);
   margin: 0 0 8px 0;
 }
@@ -170,6 +171,7 @@ h3 {
 p {
   font-size: var(--base-font-size);
   line-height: 1.5;
+  letter-spacing: 0.02em;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -183,6 +185,7 @@ p {
 }
 
 .section-2 img {
+  width: 264px;
   display: block;
 }
 
@@ -210,7 +213,7 @@ p {
 .portfolio-card-content {
   border: 1px var(--cornflower);
   border-style: none solid solid;
-  padding: 32px 16px;
+  padding: 31.4px 16px;
 }
 
 footer {
